[gd_scene load_steps=10 format=3 uid="uid://dy4hjcgj4wmyr"]

[ext_resource type="Script" path="res://scripts/AutoGun.gd" id="1_oqyok"]
[ext_resource type="PackedScene" uid="uid://nf26y1cjorp1" path="res://scenes/bullet_emmiter.tscn" id="2_8ra4e"]
[ext_resource type="Texture2D" uid="uid://c0ml024xsb2kd" path="res://art/triangle.png" id="3_5sltl"]
[ext_resource type="PackedScene" uid="uid://gluony4m18s1" path="res://scenes/ball_bullet.tscn" id="3_jiewm"]
[ext_resource type="PackedScene" uid="uid://bsflmm0xvyu0m" path="res://scenes/hurt_box.tscn" id="4_puwea"]
[ext_resource type="PackedScene" uid="uid://y8n1pi0228h5" path="res://scenes/health_component.tscn" id="5_wn6b6"]
[ext_resource type="Texture2D" uid="uid://dcb4cyonfhigt" path="res://icon.svg" id="6_d7dtw"]
[ext_resource type="AudioStream" uid="uid://bvb8a6ip4siyl" path="res://sound/hit.wav" id="7_kqi5o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxnp0"]
size = Vector2(25, 27)

[node name="AutoGun" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_oqyok")

[node name="BulletEmmiter" parent="." instance=ExtResource("2_8ra4e")]
bullet_type = ExtResource("3_jiewm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.45, 0.45)
texture = ExtResource("3_5sltl")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health_component", "collision_shape") instance=ExtResource("4_puwea")]
collision_mask = 16
health_component = NodePath("../HealthComponent")
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1.5, -1.5)
shape = SubResource("RectangleShape2D_xxnp0")
debug_color = Color(0.94902, 0, 0.584314, 0.419608)

[node name="HealthComponent" parent="." instance=ExtResource("5_wn6b6")]
max_health = 10

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(1, 0, 0, 1)
emitting = false
amount = 10
one_shot = true
explosiveness = 0.8
texture = ExtResource("6_d7dtw")
direction = Vector2(0, -1)
spread = 92.69
initial_velocity_max = 384.62
angular_velocity_min = -147.69
angular_velocity_max = 147.69
scale_amount_min = 0.1
scale_amount_max = 0.2

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kqi5o")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="hit" from="HurtBox" to="." method="_on_hurt_box_hit"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
